Otro ocho con ocho

--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+activity.comments = Comments
 activity.title = Title
 activity.speakers = Speakers(Speaker1, Speaker2)
 activity.startMoment = Start Moment
