--- a/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
@@ -6,35 +6,19 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-registration.edit = Editar
-registration.show = Mostrar
-registration.conference = Conferencia
+comment.create = Crear
+comment.list = Listar
+comment.conference = Conferencia
+comment.activity = Actividad
 
-conference.title = Título
-conference.acronym = Acrónimo
-conference.venue = Lugar de celebración
-conference.submissionDeadline = Plazo límite de entrega
-conference.notificationDeadline = Plazo límite de notificación
-conference.cameraDeadline = Plazo límite de versión definitiva
-conference.startDate = Fecha de inicio
-conference.endDate = Fecha final
-conference.fee = Precio
+comment.title = Título
+comment.author = Autor
+comment.moment = Momento
+comment.text = Texto
 
-creditCard.holderName = Nombre del Titular
-creditCard.brandName = Marca Comercial
-director.creditCard.number = Número
-creditCard.expMonth = Mes de Expiració
-creditCard.expYear = Año de Expiración
-creditCard.cvv = CVV
-author.creditCard = Tarjeta de Crédito
-author.creditCard.number = Número de la tarjeta de crédito
+comment.save = Guardar
+comment.cancel= Cancelar
+comment.return= Volver
 
-registration.create = Crear un nuevo registro
-registration.save = Guardar
-registration.delete = Borrar
-registration.confirm.delete = Confirmar Eliminación
-registration.cancel= Cancelar
-registration.return= Volver
-
-registration.commit.error = No se puede realizar la operación
-registration.creditCard.error = Tarjeta de crédito está caducada
+comment.commit.error = No se puede realizar la operación.
+comment.class.error = No puedes escribir un comentario sin una conferencia o una actividad.
