--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+activity.comments = Comentarios
 activity.title = Título
 activity.speakers = Ponentes(Ponente1, Ponente2)
 activity.startMoment = Fecha comienzo
