--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -51,3 +51,5 @@ tutorial.commit.error = Cannot Commit
 panel.commit.error = Cannot Commit
 activity.empty.error = You cannot create an empty activity
 activity.url.error = Optional Attachments must be URLs
+
+panel.comments = Comments
