--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -16,14 +16,14 @@ report.quality = Calidad
 report.readability = Legibilidad
 report.conference = Conferencia
 report.comment= Comentario
-report.decision = DecisiÃ³n
+report.decision = Decisión
 report.submissioncon= Conferencia de la entrega
 
 report.create = Crear un nuevo informe
 report.save = Guardar
 report.delete = Eliminar
-report.confirm.delete = Confirmar eliminaciÃ³n
+report.confirm.delete = Confirmar eliminación
 report.cancel= Cancelar
 report.return= Volver
 
-report.commit.error = No se puede realizar la operaciÃ³n
+report.commit.error = No se puede realizar la operación
