--- a/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
@@ -8,20 +8,17 @@
 
 
 
+comment.title = Título
+comment.moment = Creado a las
+comment.author = Autor
+comment.text = Texto
 
-category.spanishTitle = Titulo
-category.englishTitle2 = Título Inglés
-category.spanishTitle2 = Título Español
+comment.return = Volver
+comment.save = Guardar
+comment.delete = Eliminar
 
-category.parent = Padre
-category.children = Hijos
+comment.cancel = Cancelar
+comment.create = Añadir comentario
+comment.edit = Editar
+comment.commit.error = No se puede realizar la operación
 
-category.return = Volver
-category.save = Guardar
-category.delete = Eliminar
-
-category.cancel = Cancelar
-category.create = Añadir Categoría
-category.edit = Editar
-category.commit.error = Operación No Válida
-category.parent.error = Debes escoger una categoría padre.
