--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -57,3 +57,4 @@ conference.keyword = Palabra Clave
 conference.search = Buscar
 
 conference.category = Categoría
+conference.comments = Comentarios
