--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -51,3 +51,4 @@ tutorial.commit.error = Operación no válida
 panel.commit.error = Operación no válida
 activity.empty.error = No puedes crear una actividad vacía
 activity.url.error = Archivos adjuntos deben ser URLs
+panel.comments = Commentarios
