--- a/Acme-Conference/src/main/webapp/views/finder/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages.properties
@@ -8,8 +8,8 @@
 
 
 finder.keyword = Keyword
-finder.startDate = Star Date Conference
-finder.endDate = End Date Conference
+finder.startDate = Star Date Conference(dd/MM/yyyy HH:mm)
+finder.endDate = End Date Conference(dd/MM/yyyy HH:mm)
 finder.category = Category
 finder.fee = Maximum Fee
 
