--- a/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
@@ -8,8 +8,8 @@
 
 
 finder.keyword = Palabra Clave
-finder.startDate = Fecha Inicio Conferencia
-finder.endDate = Fecha Fin Conferencia
+finder.startDate = Fecha Inicio Conferencia(dd/MM/yyyy HH:mm)
+finder.endDate = Fecha Fin Conferencia(dd/MM/yyyy HH:mm)
 finder.category = Categoría
 finder.fee = Máximo de Matrrícula
 
