--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -48,3 +48,22 @@ administrator.phone.error = Minimun 4 digits
 administrator.username.error = Username in use
 administrator.commit.error = Cannot Commit
 administrator.email.error = The email format is incorrect, it must be identifier @ or alias <identifier @>
+
+administrator.conferencesPerCategory= Minimum, maximum, average or standard deviation of number of conferences per category. 
+administrator.avgConferecePerCategory = Average Conferences 
+administrator.minConferecePerCategory = Minimum Conferences 
+administrator.maxConferecePerCategory = Maximum Conferences 
+administrator.stdConferecePerCategory = Standard Deviation
+
+administrator.commentsConferences= Minimum, maximum, average or standard deviation of number of comments per conference. 
+administrator.avgCommentsConf = Average Comments 
+administrator.minCommentsConf = Minimum Comments 
+administrator.maxCommentsConf = Maximum Comments 
+administrator.stdCommentConf = Standard Deviation
+
+administrator.commentsAct= Minimum, maximum, average or standard deviation of number of comments per activity. 
+administrator.avgCommentsAct = Average Comments 
+administrator.minCommentsAct = Minimum Comments 
+administrator.maxCommentsAct = Maximum Comments 
+administrator.stdCommentsAct = Standard Deviation
+
