--- a/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
@@ -48,3 +48,22 @@ administrator.phone.error = Minimo 4 digitos
 administrator.username.error = Nombre de Usuario en uso
 administrator.commit.error = Operación No Válida
 administrator.email.error = El formato del email es incorrecto, debe de ser identifier@ o alias <identifier@>
+
+administrator.conferencesPerCategory= Minimo, máximo, media o desviación estándar de número de conferencias por categoría. 
+administrator.avgConferecePerCategory = Media Conferencias
+administrator.minConferecePerCategory = Mínima Conferencias
+administrator.maxConferecePerCategory = Maximo Conferencias
+administrator.stdConferecePerCategory = Desviación Estándar
+
+administrator.commentsConferences= Minimo, máximo, media o desviación estándar de número de comentarios por conferencia. 
+administrator.avgCommentsConf = Media Comentarios
+administrator.minCommentsConf = Minimo Comentarios
+administrator.maxCommentsConf = Maximo Comentarios
+administrator.stdCommentConf = Desviación Estándar
+
+administrator.commentsAct= Minimo, máximo, media o desviación estándar de número de comentarios por actividad.
+administrator.avgCommentsAct = Media Comentarios
+administrator.minCommentsAct = Minimo Comentarios
+administrator.maxCommentsAct = Maximo Comentarios 
+administrator.stdCommentsAct = Desviación Estándar
+
