--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -47,7 +47,7 @@ administrator.cancel = Cancel
 administrator.phone.error = Minimun 4 digits
 administrator.username.error = Username in use
 administrator.commit.error = Cannot Commit
-administrator.email.error = The email format is incorrect, it must be identifier @ or alias <identifier @>
+administrator.email.error = The email format is incorrect.
 
 administrator.conferencesPerCategory= Minimum, maximum, average or standard deviation of number of conferences per category. 
 administrator.avgConferecePerCategory = Average Conferences 
