--- a/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
@@ -47,7 +47,7 @@ administrator.cancel = Cancelar
 administrator.phone.error = Minimo 4 digitos
 administrator.username.error = Nombre de Usuario en uso
 administrator.commit.error = Operación No Válida
-administrator.email.error = El formato del email es incorrecto, debe de ser identifier@ o alias <identifier@>
+administrator.email.error = El formato del email es incorrecto.
 
 administrator.conferencesPerCategory= Minimo, máximo, media o desviación estándar de número de conferencias por categoría. 
 administrator.avgConferecePerCategory = Media Conferencias
