--- a/Acme-Conference/src/main/webapp/views/author/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages.properties
@@ -14,7 +14,7 @@ author.middleName = Middle Name
 author.surname = Surname
 author.optionalPhoto = Optional Photo
 author.phoneNumber = Optional Phone Number
-author.email = Email
+author.email = Email 
 author.address = Optional Address
 
 author.save = Save
@@ -24,4 +24,4 @@ author.cancel = Cancel
 author.phone.error = Minimun 4 digits
 author.username.error = Username in use
 author.commit.error = Cannot Commit
-author.email.error = The email format is incorrect, it must be identifier @ domain or alias <identifier @ domain>
+author.email.error = The email format is incorrect.
