--- a/Acme-Conference/src/main/webapp/views/author/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages_es.properties
@@ -24,4 +24,4 @@ author.cancel = Cancelar
 author.phone.error = Minimo 4 digitos
 author.username.error = Nombre de usuario en uso
 author.commit.error = Operación No Válida
-author.email.error = El formato del email es incorrecto, debe de ser identifier@domain o alias <identifier@domain>
+author.email.error = El formato del email es incorrecto.
