--- a/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -26,4 +26,4 @@ reviewer.cancel = Cancelar
 reviewer.phone.error = Mínimo 4 dígitos
 reviewer.username.error = Nombre de usuario en uso
 reviewer.commit.error = No se puede realizar la operación
-reviewer.email.error = El formato del email es incorrecto, debe de ser identifier@domain o alias <identifier@domain>
+reviewer.email.error = El formato del email es incorrecto.
