--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -46,6 +46,9 @@ presentation.show = Edit
 presentation.delete = Delete
 section.create = Create section
 
+activity.delete = Delete
+
+
 presentation.commit.error = Cannot Commit
 tutorial.commit.error = Cannot Commit
 panel.commit.error = Cannot Commit
