--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -46,9 +46,12 @@ presentation.show = Editar
 presentation.delete = Eliminar
 section.create = Crear Sección
 
+activity.delete = Eliminar
+
+
 presentation.commit.error = Operación no válida
 tutorial.commit.error = Operación no válida
 panel.commit.error = Operación no válida
 activity.empty.error = No puedes crear una actividad vacía
 activity.url.error = Archivos adjuntos deben ser URLs
-panel.comments = Commentarios
+panel.comments = Comentarios
