--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-master.page.administrator			= Administrator
+master.page.administrator			= Administrador
 master.page.reviewer= Revisor
 master.page.message = Mensajes
 master.page.conferences = Conferencias
@@ -26,7 +26,7 @@ master.page.conference.search= Buscar Conferencia
 master.page.dashboard = Tablero de estadísticas
 
 master.page.conference.list = Conferencias
-master.page.profile 				= Profile
+master.page.profile 				= Perfil
 master.page.configuration.edit = Configuración
 welcome.breach = Brecha
 welcome.security = Seguridad
