--- a/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
@@ -23,7 +23,7 @@ conference.fee = Precio
 creditCard.holderName = Nombre del Titular
 creditCard.brandName = Marca Comercial
 director.creditCard.number = Número
-creditCard.expMonth = Mes de Expiració
+creditCard.expMonth = Mes de Expiración
 creditCard.expYear = Año de Expiración
 creditCard.cvv = CVV
 author.creditCard = Tarjeta de Crédito
