--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -67,3 +67,5 @@ administrator.minCommentsAct = Minimum Comments
 administrator.maxCommentsAct = Maximum Comments 
 administrator.stdCommentsAct = Standard Deviation
 
+administrator.email.pattern = *Format : identifier@ or alias<identifier@>
+
