--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
@@ -67,3 +67,6 @@ administrator.minCommentsAct = Minimo Comentarios
 administrator.maxCommentsAct = Maximo Comentarios 
 administrator.stdCommentsAct = Desviación Estándar
 
+administrator.email.pattern = *Formato : identifier@ or alias<identifier@>
+
+
