--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/author/messages.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/author/messages.properties
@@ -25,3 +25,5 @@ author.phone.error = Minimun 4 digits
 author.username.error = Username in use
 author.commit.error = Cannot Commit
 author.email.error = The email format is incorrect.
+
+author.email.pattern= *Format: identifier@domain or alias<identifier@domain>
