--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/author/messages_es.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/author/messages_es.properties
@@ -25,3 +25,5 @@ author.phone.error = Minimo 4 digitos
 author.username.error = Nombre de usuario en uso
 author.commit.error = Operación No Válida
 author.email.error = El formato del email es incorrecto.
+
+author.email.pattern= *Formato: identifier@domain or alias<identifier@domain>
