--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -27,3 +27,5 @@ reviewer.phone.error = Minimun 4 digits
 reviewer.username.error = Username in use
 reviewer.commit.error = Cannot Commit
 reviewer.email.error = The email format is incorrect.
+
+reviewer.email.pattern= *Format: identifier@domain or alias<identifier@domain>
