--- a/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Proyecto-Actualizado/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -27,3 +27,5 @@ reviewer.phone.error = Mínimo 4 dígitos
 reviewer.username.error = Nombre de usuario en uso
 reviewer.commit.error = No se puede realizar la operación
 reviewer.email.error = El formato del email es incorrecto.
+
+reviewer.email.pattern= *Formato: identifier@domain or alias<identifier@domain>
